[gd_scene load_steps=55 format=3 uid="uid://buy43th1ujst1"]

[ext_resource type="PackedScene" uid="uid://byn7pabfelh75" path="res://objects(like_player)/brocoli.tscn" id="1_h6aca"]
[ext_resource type="Texture2D" uid="uid://b08ncrkjgfiwy" path="res://art/random/LIBRESPRITE KITCHEN BACKGROUNG N2 (1).png" id="1_qd2ys"]
[ext_resource type="PackedScene" uid="uid://d4f58llm605ux" path="res://objects(like_player)/cheese.tscn" id="2_6puvp"]
[ext_resource type="Script" path="res://scripts/drag_and_drop.gd" id="3_nbx7t"]
[ext_resource type="PackedScene" uid="uid://dlewbais4dcgg" path="res://objects(like_player)/drop_spot_invis.tscn" id="3_trbij"]
[ext_resource type="PackedScene" uid="uid://cgpskou75yp4j" path="res://objects(like_player)/egg.tscn" id="4_5ixck"]
[ext_resource type="PackedScene" uid="uid://dmo8yodnbrcmy" path="res://objects(like_player)/carrot.tscn" id="5_na3ga"]
[ext_resource type="PackedScene" uid="uid://bf1d7y40kkm2h" path="res://objects(like_player)/mushroom.tscn" id="6_emvep"]
[ext_resource type="PackedScene" uid="uid://cic8dqa2ylmar" path="res://objects(like_player)/peas.tscn" id="7_r0bfm"]
[ext_resource type="PackedScene" uid="uid://cpsterdq6puv5" path="res://objects(like_player)/water.tscn" id="8_0sft1"]
[ext_resource type="PackedScene" uid="uid://d3qvdq7nbcl6o" path="res://objects(like_player)/onion.tscn" id="9_7fog1"]
[ext_resource type="PackedScene" uid="uid://bigx3a63177d3" path="res://objects(like_player)/lasagna_layers.tscn" id="10_0hy3h"]
[ext_resource type="PackedScene" uid="uid://dwfxg67j3odt5" path="res://objects(like_player)/sauce_bowl.tscn" id="11_lqtwk"]
[ext_resource type="PackedScene" uid="uid://d220w4pnupsyd" path="res://objects(like_player)/sprite_2d.tscn" id="11_ovqan"]
[ext_resource type="PackedScene" uid="uid://m3d7tro7px8j" path="res://objects(like_player)/salt.tscn" id="11_u8fww"]
[ext_resource type="Script" path="res://scripts/sauce_ball.gd" id="12_psedf"]
[ext_resource type="PackedScene" uid="uid://b43j02bu2c86u" path="res://objects(like_player)/hands.tscn" id="13_5g2ai"]
[ext_resource type="PackedScene" uid="uid://d271ehbuu5rl6" path="res://objects(like_player)/basil.tscn" id="14_sgvd6"]
[ext_resource type="PackedScene" uid="uid://dtq5ylnp4xniy" path="res://objects(like_player)/tomato.tscn" id="14_tth8y"]
[ext_resource type="Script" path="res://objects(like_player)/bowls.gd" id="18_vin7b"]
[ext_resource type="PackedScene" uid="uid://bc25jivif6260" path="res://objects(like_player)/sauce_bowl_i.tscn" id="19_2okdf"]
[ext_resource type="PackedScene" uid="uid://nb83qpiohiep" path="res://objects(like_player)/olive_oil.tscn" id="19_20dkh"]
[ext_resource type="PackedScene" uid="uid://rjh6n1flc8ux" path="res://objects(like_player)/garlic.tscn" id="19_cqhnr"]
[ext_resource type="PackedScene" uid="uid://du3f2ssn5y5l1" path="res://objects(like_player)/condecsedTomato.tscn" id="20_2tkd5"]
[ext_resource type="Texture2D" uid="uid://oclun00klvuv" path="res://art/SauceAnimation/דשוSAUCE 1.png" id="21_4upg8"]
[ext_resource type="Texture2D" uid="uid://deakd2dht6usm" path="res://art/layersBowl/lasanga layers 2.png" id="22_tv4we"]
[ext_resource type="Texture2D" uid="uid://btxty2tl0xsaq" path="res://art/layersBowl/lasanga layers 3.png" id="23_jskbc"]
[ext_resource type="Texture2D" uid="uid://jajermxsrrlm" path="res://art/drive-download-20240702T182322Z-001/LASANGA 2 .png" id="24_aw5co"]
[ext_resource type="Texture2D" uid="uid://crjxjlgjujwc3" path="res://art/layersBowl/lasanga layers 4.png" id="24_eotmk"]
[ext_resource type="Texture2D" uid="uid://be2ht7uaq5apf" path="res://art/drive-download-20240702T182322Z-001/LASANGA 3 .png" id="25_4nxng"]
[ext_resource type="Texture2D" uid="uid://dhc7dw36toorf" path="res://art/layersBowl/lasanga layers 5.png" id="25_5pi8m"]
[ext_resource type="Texture2D" uid="uid://jcf6m058srop" path="res://art/drive-download-20240702T182322Z-001/LASANGA 4 .png" id="26_nhv4k"]
[ext_resource type="Texture2D" uid="uid://ctuarw6axxky4" path="res://art/drive-download-20240702T182322Z-001/LASANGA 5 .png" id="27_nj72h"]
[ext_resource type="Texture2D" uid="uid://wm0uyodd2b35" path="res://art/drive-download-20240702T182322Z-001/LASANGA 6 .png" id="28_jno1b"]
[ext_resource type="Texture2D" uid="uid://bttje1fs1hk2k" path="res://art/drive-download-20240702T182322Z-001/LASANGA 1 .png" id="29_2nnrx"]
[ext_resource type="Texture2D" uid="uid://37berq84cve1" path="res://art/drive-download-20240702T182322Z-001/LASANGA 7 .png" id="29_owapx"]
[ext_resource type="PackedScene" uid="uid://dcp8qtbkg0lk8" path="res://objects(like_player)/text_box.tscn" id="30_ev6go"]
[ext_resource type="Texture2D" uid="uid://bsnwox1tfv1sc" path="res://art/drive-download-20240702T182322Z-001/LASANGA 8 .png" id="30_vv3ui"]
[ext_resource type="Texture2D" uid="uid://c7syla7tt3wjb" path="res://art/drive-download-20240702T182322Z-001/LASANGA 8 AND HALF .png" id="31_8ai17"]
[ext_resource type="AudioStream" uid="uid://ckde7ql1trwfk" path="res://audio/Cooking part and main menu.mp3" id="31_tfyox"]
[ext_resource type="AudioStream" uid="uid://dt3l4rl6dpec7" path="res://audio/fail (1) (1).mp3" id="32_4si0h"]
[ext_resource type="Texture2D" uid="uid://dsfm0bxn7mya2" path="res://art/drive-download-20240702T182322Z-001/LASANGA 9 .png" id="32_hdmum"]
[ext_resource type="Texture2D" uid="uid://ctc52ef8fsto8" path="res://art/drive-download-20240702T182322Z-001/LASANGA 10 .png" id="33_x7gwl"]
[ext_resource type="Texture2D" uid="uid://ccqkcl2a1wut6" path="res://art/drive-download-20240702T182322Z-001/LASANGA 11 .png" id="34_fxf2e"]
[ext_resource type="Texture2D" uid="uid://bcvrykfsesjis" path="res://art/drive-download-20240702T182322Z-001/LASANGA 12 .png" id="35_jbyyh"]
[ext_resource type="Texture2D" uid="uid://daf74d7vvchkj" path="res://art/drive-download-20240702T182322Z-001/LASANGA 13 .png" id="36_n6jb0"]
[ext_resource type="Texture2D" uid="uid://com0asxl7jkhu" path="res://art/drive-download-20240702T182322Z-001/LASANGA 14 .png" id="37_p3g1w"]
[ext_resource type="Texture2D" uid="uid://7vtjr0u4xlhr" path="res://art/drive-download-20240702T182322Z-001/LASANGA 15 .png" id="38_cmyto"]
[ext_resource type="Texture2D" uid="uid://dk53jamnnv77b" path="res://art/drive-download-20240702T182322Z-001/LASANGA 16 .png" id="39_efi46"]
[ext_resource type="Texture2D" uid="uid://c31juea7gekds" path="res://art/drive-download-20240702T182322Z-001/LASANGA 17 .png" id="40_s4fwt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2i2f"]
size = Vector2(62, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_ts074"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_4upg8")
}, {
"duration": 1.0,
"texture": ExtResource("22_tv4we")
}, {
"duration": 1.0,
"texture": ExtResource("23_jskbc")
}, {
"duration": 1.0,
"texture": ExtResource("24_eotmk")
}, {
"duration": 1.0,
"texture": ExtResource("25_5pi8m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nd3tg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("29_2nnrx")
}, {
"duration": 1.0,
"texture": ExtResource("24_aw5co")
}, {
"duration": 1.0,
"texture": ExtResource("25_4nxng")
}, {
"duration": 1.0,
"texture": ExtResource("26_nhv4k")
}, {
"duration": 1.0,
"texture": ExtResource("27_nj72h")
}, {
"duration": 1.0,
"texture": ExtResource("28_jno1b")
}, {
"duration": 1.0,
"texture": ExtResource("29_owapx")
}, {
"duration": 1.0,
"texture": ExtResource("30_vv3ui")
}, {
"duration": 1.0,
"texture": ExtResource("31_8ai17")
}, {
"duration": 1.0,
"texture": ExtResource("32_hdmum")
}, {
"duration": 1.0,
"texture": ExtResource("33_x7gwl")
}, {
"duration": 1.0,
"texture": ExtResource("34_fxf2e")
}, {
"duration": 1.0,
"texture": ExtResource("35_jbyyh")
}, {
"duration": 1.0,
"texture": ExtResource("36_n6jb0")
}, {
"duration": 1.0,
"texture": ExtResource("37_p3g1w")
}, {
"duration": 1.0,
"texture": ExtResource("38_cmyto")
}, {
"duration": 1.0,
"texture": ExtResource("39_efi46")
}, {
"duration": 1.0,
"texture": ExtResource("40_s4fwt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m455b"]
size = Vector2(60.8945, 12.318)

[node name="CookingPart" type="Node2D"]
scale = Vector2(0.945, 0.945)

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(1005, 531)
scale = Vector2(2, 2)
texture = ExtResource("1_qd2ys")

[node name="drop_spots" type="Node2D" parent="."]

[node name="drop_spot_invis" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1174.6, 439.153)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis16" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(133.333, 828.571)
scale = Vector2(7, 7)

[node name="drop_spot_invis17" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(313.227, 826.455)
scale = Vector2(7, 7)

[node name="drop_spot_invis18" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(313.228, 1004.23)
scale = Vector2(7, 7)

[node name="drop_spot_invis19" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(130.159, 1011.64)
scale = Vector2(7, 7)

[node name="drop_spot_invis12" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1434.92, 439.153)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis6" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1562.96, 177.778)
scale = Vector2(10.554, 4.60128)

[node name="drop_spot_invis7" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1285.71, 191.534)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis8" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1011.64, 186.243)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis9" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(744.974, 195.767)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis10" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(420.106, 190.476)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis11" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(133, 182)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis3" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(918.519, 438.095)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis2" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(656.085, 433.862)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis4" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(386.243, 429.63)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis5" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(128.042, 432.804)
scale = Vector2(10.5423, 3.57602)

[node name="drop_spot_invis15" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1941.8, 444.444)
scale = Vector2(5.995, 3.07)

[node name="drop_spot_invis13" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1705.82, 425.397)
scale = Vector2(10.542, 4.351)

[node name="drop_spot_invis14" parent="drop_spots" instance=ExtResource("3_trbij")]
position = Vector2(1866.67, 179.894)
scale = Vector2(10.542, 4.351)

[node name="ingredints" type="Node2D" parent="."]

[node name="lasagna layers" parent="ingredints" groups=["foods"] instance=ExtResource("10_0hy3h")]
position = Vector2(1008.47, 622.222)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="Mushroom" parent="ingredints" groups=["foods"] instance=ExtResource("6_emvep")]
position = Vector2(1177.78, 443.386)
scale = Vector2(6.8, 6.8)

[node name="oliveOil" parent="ingredints" groups=["foods"] instance=ExtResource("19_20dkh")]
position = Vector2(912.169, 420.106)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="onion" parent="ingredints" groups=["foods"] instance=ExtResource("9_7fog1")]
position = Vector2(123.81, 426.455)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="onion2" parent="ingredints" groups=["foods"] instance=ExtResource("9_7fog1")]
position = Vector2(136.508, 179.894)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="peas" parent="ingredints" groups=["foods"] instance=ExtResource("7_r0bfm")]
position = Vector2(716.402, 191.534)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="salt" parent="ingredints" groups=["foods"] instance=ExtResource("11_u8fww")]
position = Vector2(676.19, 441.27)
scale = Vector2(6.8, 6.8)

[node name="flour" parent="ingredints" groups=["foods"] instance=ExtResource("11_ovqan")]
position = Vector2(133.333, 827.513)
scale = Vector2(6.8, 6.8)

[node name="tomato" parent="ingredints" groups=["foods"] instance=ExtResource("14_tth8y")]
position = Vector2(386.243, 429.63)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="parlsy" parent="ingredints" groups=["foods"] instance=ExtResource("14_sgvd6")]
position = Vector2(392.593, 185.185)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="water" parent="ingredints" groups=["foods"] instance=ExtResource("8_0sft1")]
position = Vector2(1014.81, 183.069)
scale = Vector2(6.8, 6.8)

[node name="brocoli" parent="ingredints" groups=["foods"] instance=ExtResource("1_h6aca")]
position = Vector2(1558.73, 176.72)
scale = Vector2(4.485, 4.485)

[node name="Carrot" parent="ingredints" groups=["foods"] instance=ExtResource("5_na3ga")]
position = Vector2(1722.75, 425.397)
scale = Vector2(6.8, 6.8)

[node name="cheese_" parent="ingredints" groups=["foods"] instance=ExtResource("2_6puvp")]
visible = false
position = Vector2(1432.8, 444.444)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="cheese2_" parent="ingredints" groups=["foods"] instance=ExtResource("2_6puvp")]
visible = false
position = Vector2(1281.48, 189.418)
scale = Vector2(6.8, 6.8)
script = ExtResource("3_nbx7t")

[node name="egg" parent="ingredints" groups=["foods"] instance=ExtResource("4_5ixck")]
position = Vector2(317.46, 827.513)
scale = Vector2(2.355, 2.355)
script = ExtResource("3_nbx7t")

[node name="garlic" parent="ingredints" groups=["foods"] instance=ExtResource("19_cqhnr")]
position = Vector2(1937.57, 434.921)
scale = Vector2(8, 8)
region_rect = Rect2(36.9997, 22.6087, 7.02679, 6.6214)

[node name="SauceBowlI" parent="ingredints" groups=["foods"] instance=ExtResource("19_2okdf")]
position = Vector2(787.302, 616.931)
scale = Vector2(4.89, 4.89)

[node name="condecsedTomato" parent="ingredints" groups=["foods"] instance=ExtResource("20_2tkd5")]
position = Vector2(1870.9, 185.185)
scale = Vector2(4.73, 4.73)
script = ExtResource("3_nbx7t")

[node name="drop_spot_invis2" parent="." instance=ExtResource("3_trbij")]
position = Vector2(948.148, 916.402)
scale = Vector2(27.825, 13.0725)
script = ExtResource("18_vin7b")

[node name="SauceBowl" parent="drop_spot_invis2" instance=ExtResource("11_lqtwk")]
position = Vector2(-0.256897, -0.872215)
scale = Vector2(0.377358, 0.803213)
script = ExtResource("12_psedf")

[node name="AreaSause" type="Area2D" parent="drop_spot_invis2/SauceBowl"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="drop_spot_invis2/SauceBowl/AreaSause"]
position = Vector2(2, 0.5)
shape = SubResource("RectangleShape2D_r2i2f")

[node name="LayersBowl" parent="drop_spot_invis2" instance=ExtResource("11_lqtwk")]
position = Vector2(0.722588, -5.82829)
scale = Vector2(0.377358, 0.803213)
sprite_frames = SubResource("SpriteFrames_ts074")
frame = 0
frame_progress = 0.0
script = ExtResource("12_psedf")

[node name="AreaLayer" type="Area2D" parent="drop_spot_invis2/LayersBowl"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="drop_spot_invis2/LayersBowl/AreaLayer"]
position = Vector2(0.378441, 0.6828)
shape = SubResource("RectangleShape2D_r2i2f")

[node name="LasgnaBowl" parent="drop_spot_invis2" instance=ExtResource("11_lqtwk")]
position = Vector2(0.26622, -8.74244)
scale = Vector2(0.377358, 0.803213)
sprite_frames = SubResource("SpriteFrames_nd3tg")
frame = 0
frame_progress = 0.0
script = ExtResource("12_psedf")

[node name="AreaLasgna" type="Area2D" parent="drop_spot_invis2/LasgnaBowl"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="drop_spot_invis2/LasgnaBowl/AreaLasgna"]
position = Vector2(0.16555, 12.9894)
shape = SubResource("RectangleShape2D_m455b")

[node name="TextBox" parent="." instance=ExtResource("30_ev6go")]
offset = Vector2(974.86, 427.79)
scale = Vector2(0.585, 0.585)
transform = Transform2D(0.585, 0, 0, 0.585, 974.86, 427.79)

[node name="hands" parent="." instance=ExtResource("13_5g2ai")]
position = Vector2(-302.646, 767.196)
scale = Vector2(12.215, 12.215)

[node name="CookingMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_tfyox")
autoplay = true

[node name="fail" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32_4si0h")
volume_db = 24.0
pitch_scale = 1.61

[node name="Oven" type="Button" parent="."]
visible = false
offset_left = 1725.0
offset_right = 1922.0
offset_bottom = 104.0
text = "Oven"

[connection signal="area_entered" from="drop_spot_invis2/SauceBowl/AreaSause" to="drop_spot_invis2" method="_on_area_sause_area_entered"]
[connection signal="area_entered" from="drop_spot_invis2/LayersBowl/AreaLayer" to="drop_spot_invis2" method="_on_area_layer_area_entered"]
[connection signal="input_event" from="drop_spot_invis2/LayersBowl/AreaLayer" to="drop_spot_invis2/SauceBowl" method="_on_area_layer_input_event"]
[connection signal="area_entered" from="drop_spot_invis2/LasgnaBowl/AreaLasgna" to="drop_spot_invis2" method="_on_area_lasgna_area_entered"]
[connection signal="input_event" from="drop_spot_invis2/LasgnaBowl/AreaLasgna" to="drop_spot_invis2/SauceBowl" method="_on_area_layer_input_event"]
[connection signal="pressed" from="Oven" to="drop_spot_invis2" method="_on_oven_pressed"]
